--- a/source/css/main.css.sass
+++ b/source/css/main.css.sass
@@ -1,9 +1,9 @@
-@import "compass"
+@import compass
 
-@import "variables"
+@import variables
 
 // Twitter Bootstrap
-@import "bootstrap"
+@import bootstrap
 
 // Optional Bootstrap theme
-// @import "bootstrap/theme"
+// @import bootstrap/theme
