start of layout

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,6 +1,12 @@
 ---
-title: Welcome to Middleman
+title: Reedyfest 2014
 ---
 
-h1 bootstrap-sass-slim
-p A Middleman Project Template built with Twitter Bootstrap, Sass & Slim
+.navbar.navbar-inverse.navbar-fixed-top
+  .container
+    .navbar-header
+     .navbar-brand Reedyfest 2014
+
+.container
+  h1 Reedyfest
+  p 2013 We Did It! 2014 Let's Do It!
